chore: update swagger; update queyr hooks
