# src/api/query/auth/auth.msw.ts
@@ -18,8 +18,12 @@ export const getAuthControllerLoginResponseMock = (overrideResponse: any = {}): 
   user: {
     consent: faker.helpers.arrayElement([
       {
+        createdAt: `${faker.date.past().toISOString().split('.')[0]}Z`,
         privacyPolicyAccepted: faker.datatype.boolean(),
+        privacyPolicyVersion: faker.word.sample(),
         termsAccepted: faker.datatype.boolean(),
+        termsVersion: faker.word.sample(),
+        updatedAt: `${faker.date.past().toISOString().split('.')[0]}Z`,
         ...overrideResponse,
       },
       undefined,
@@ -52,8 +56,12 @@ export const getAuthControllerLoginResponseMock = (overrideResponse: any = {}): 
 export const getAuthControllerRegisterResponseMock = (overrideResponse: any = {}): UserEntity => ({
   consent: faker.helpers.arrayElement([
     {
+      createdAt: `${faker.date.past().toISOString().split('.')[0]}Z`,
       privacyPolicyAccepted: faker.datatype.boolean(),
+      privacyPolicyVersion: faker.word.sample(),
       termsAccepted: faker.datatype.boolean(),
+      termsVersion: faker.word.sample(),
+      updatedAt: `${faker.date.past().toISOString().split('.')[0]}Z`,
       ...overrideResponse,
     },
     undefined,
@@ -84,8 +92,12 @@ export const getAuthControllerRegisterResponseMock = (overrideResponse: any = {}
 export const getAuthControllerMeResponseMock = (overrideResponse: any = {}): UserEntity => ({
   consent: faker.helpers.arrayElement([
     {
+      createdAt: `${faker.date.past().toISOString().split('.')[0]}Z`,
       privacyPolicyAccepted: faker.datatype.boolean(),
+      privacyPolicyVersion: faker.word.sample(),
       termsAccepted: faker.datatype.boolean(),
+      termsVersion: faker.word.sample(),
+      updatedAt: `${faker.date.past().toISOString().split('.')[0]}Z`,
       ...overrideResponse,
     },
     undefined,
